--- a/css/style.css
+++ b/css/style.css
@@ -6,74 +6,49 @@
   font-family: "Basic", sans-serif;
 }
 body {
-  color: #fff;
   overflow-x: hidden;
   height: 100%;
   background-image: linear-gradient(#81D4FA, #2196F3);
   background-repeat: no-repeat;
 }
 
+main {
+  min-height: 100vh;
+}
+
 .card0 {
-  width: 94%;
+  width: 90%;
+  border-radius: 100% !important;
 }
 
 .card1 {
+  color: #fff;
   background-image: url('../img/natural.jpg');
   background-size: cover;
 }
 
+.card {
+  border: none;
+  border-radius: 0;
+  background-color: #f6f8fd;
+}
 
 .large-font {
   font-size: 70px;
   font-family: Arial;
 }
 
-.card2 {
-  padding: 0px 0px 40px 40px;
-  color: black;
-}
-
-input {
-  background-color: #607D8B;
-  padding: 24px 0px 12px 0px !important;
-  width: 80%;
-  box-sizing: border-box;
+input{
+  border-radius: 50px !important;
+  padding-left: 30px !important;
   border: none !important;
-  border-bottom: 1px solid #CFD8DC !important;
-  font-size: 16px !important;
-  color: #fff !important;
+  background-color: #e5e9f2 !important;
+}
+button{
+  border-radius: 50px!important;
+  font-weight: 600 !important;
 }
 
-input:focus {
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  border-bottom: 1px solid #fff !important;
-  outline-width: 0;
-  font-weight: 400;
-}
-
-::placeholder {
-  color: #B0BEC5 !important;
-  opacity: 1;
-}
-
-:-ms-input-placeholder {
-  color: #B0BEC5 !important;
-}
-
-::-ms-input-placeholder {
-  color: #B0BEC5 !important;
-}
-
-.fa-search {
-  color: #607D8B;
-  background-color: #E1F5FE;
-  font-size: 20px;
-  padding: 20px;
-  width: 20%;
-  cursor: pointer;
-}
 
 .light-text {
   color: #B0BEC5;
