--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,9 @@
   box-sizing: border-box;
   font-family: "Basic", sans-serif;
 }
+
+body {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(../img/bg.jpg);
+}
