--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,10 @@
   box-sizing: border-box;
   font-family: "Basic", sans-serif;
 }
-<<<<<<< HEAD
-
-body {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url(../img/bg.jpg);
-}
-=======
 body {
   overflow-x: hidden;
   height: 100%;
-  background-image: linear-gradient(#81D4FA, #2196F3);
+  background-image: linear-gradient(#81d4fa, #2196f3);
   background-repeat: no-repeat;
 }
 
@@ -31,7 +23,7 @@ main {
 
 .card1 {
   color: #fff;
-  background-image: url('../img/natural.jpg');
+  background-image: url("../img/natural.jpg");
   background-size: cover;
 }
 
@@ -46,20 +38,19 @@ main {
   font-family: Arial;
 }
 
-input{
+input {
   border-radius: 50px !important;
   padding-left: 30px !important;
   border: none !important;
   background-color: #e5e9f2 !important;
 }
-button{
-  border-radius: 50px!important;
+button {
+  border-radius: 50px !important;
   font-weight: 600 !important;
 }
 
-
 .light-text {
-  color: #B0BEC5;
+  color: #b0bec5;
 }
 
 .suggestion:hover {
@@ -69,12 +60,11 @@ button{
 
 .line {
   height: 1px;
-  background-color: #B0BEC5;
+  background-color: #b0bec5;
 }
 
 @media screen and (max-width: 500px) {
   .card1 {
-      padding-left: 26px;
+    padding-left: 26px;
   }
 }
->>>>>>> refs/remotes/origin/main
